--- a/spot-core/src/main/resources/messages/validation_de.properties
+++ b/spot-core/src/main/resources/messages/validation_de.properties
@@ -1,22 +1,22 @@
 
-javax.validation.constraints.AssertFalse.message = muss falsch sein
-javax.validation.constraints.AssertTrue.message  = muss wahr sein
-javax.validation.constraints.DecimalMax.message  = muss kleiner ${strict == false ? 'oder gleich ' : ''}{value} sein
-javax.validation.constraints.DecimalMin.message  = muss gr\u00F6\u00DFer ${inclusive == true ? 'oder gleich ' : ''}{value} sein
-javax.validation.constraints.Digits.message      = numerischer Wert au\u00DFerhalb erlaubten Wertebereichs (<{integer} Ziffern>,<{fraction} Ziffern> erwartet)
-javax.validation.constraints.Email.message       = keine g\u00FCltige E-Mail-Adresse
-javax.validation.constraints.Future.message      = muss in der Zukunft liegen
-javax.validation.constraints.Max.message         = muss kleiner oder gleich {value} sein
-javax.validation.constraints.Min.message         = muss gr\u00F6\u00DFer oder gleich {value} sein
-javax.validation.constraints.Negative.message    = muss kleiner ${inclusive == true ? 'oder gleich ' : ''}0 sein
-javax.validation.constraints.NotBlank.message    = darf nicht leer sein
-javax.validation.constraints.NotEmpty.message    = darf nicht leer sein
-javax.validation.constraints.NotNull.message     = darf nicht null sein
-javax.validation.constraints.Null.message        = muss null sein
-javax.validation.constraints.Past.message        = muss in der Vergangenheit liegen
-javax.validation.constraints.Pattern.message     = muss auf Ausdruck "{regexp}" passen
-javax.validation.constraints.Positive.message    = muss gr\u00F6\u00DFer ${strict == false ? 'oder gleich ' : ''}0 sein
-javax.validation.constraints.Size.message        = muss zwischen {min} und {max} liegen
+jakarta.validation.constraints.AssertFalse.message = muss falsch sein
+jakarta.validation.constraints.AssertTrue.message  = muss wahr sein
+jakarta.validation.constraints.DecimalMax.message  = muss kleiner ${strict == false ? 'oder gleich ' : ''}{value} sein
+jakarta.validation.constraints.DecimalMin.message  = muss gr\u00F6\u00DFer ${inclusive == true ? 'oder gleich ' : ''}{value} sein
+jakarta.validation.constraints.Digits.message      = numerischer Wert au\u00DFerhalb erlaubten Wertebereichs (<{integer} Ziffern>,<{fraction} Ziffern> erwartet)
+jakarta.validation.constraints.Email.message       = keine g\u00FCltige E-Mail-Adresse
+jakarta.validation.constraints.Future.message      = muss in der Zukunft liegen
+jakarta.validation.constraints.Max.message         = muss kleiner oder gleich {value} sein
+jakarta.validation.constraints.Min.message         = muss gr\u00F6\u00DFer oder gleich {value} sein
+jakarta.validation.constraints.Negative.message    = muss kleiner ${inclusive == true ? 'oder gleich ' : ''}0 sein
+jakarta.validation.constraints.NotBlank.message    = darf nicht leer sein
+jakarta.validation.constraints.NotEmpty.message    = darf nicht leer sein
+jakarta.validation.constraints.NotNull.message     = darf nicht null sein
+jakarta.validation.constraints.Null.message        = muss null sein
+jakarta.validation.constraints.Past.message        = muss in der Vergangenheit liegen
+jakarta.validation.constraints.Pattern.message     = muss auf Ausdruck "{regexp}" passen
+jakarta.validation.constraints.Positive.message    = muss gr\u00F6\u00DFer ${strict == false ? 'oder gleich ' : ''}0 sein
+jakarta.validation.constraints.Size.message        = muss zwischen {min} und {max} liegen
 
 org.hibernate.validator.constraints.CreditCardNumber.message       = ung\u00FCltige Kreditkartennummer
 org.hibernate.validator.constraints.Currency.message               = ung\u00FCltige W\u00E4hrung (erlaubte Werte: {value})
