--- a/spot-core/src/main/resources/messages/validation_en.properties
+++ b/spot-core/src/main/resources/messages/validation_en.properties
@@ -1,22 +1,22 @@
 
-javax.validation.constraints.AssertFalse.message = must be false
-javax.validation.constraints.AssertTrue.message  = must be true
-javax.validation.constraints.DecimalMax.message  = must be less than or equal to {value}
-javax.validation.constraints.DecimalMin.message  = must be greater than or equal to {value}
-javax.validation.constraints.Digits.message      = numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)
-javax.validation.constraints.Email.message       = not a valid email address
-javax.validation.constraints.Future.message      = must be in the future
-javax.validation.constraints.Max.message         = must be less than or equal to {value}
-javax.validation.constraints.Min.message         = must be greater than or equal to {value}
-javax.validation.constraints.Negative.message    = must be less ${inclusive == true ? 'or equal ' : ''}0
-javax.validation.constraints.NotBlank.message    = must not be empty
-javax.validation.constraints.NotEmpty.message    = must not be empty
-javax.validation.constraints.NotNull.message     = may not be null
-javax.validation.constraints.Null.message        = must be null
-javax.validation.constraints.Past.message        = must be in the past
-javax.validation.constraints.Pattern.message     = must match "{regexp}"
-javax.validation.constraints.Positive.message    = must be greater ${strict == false ? 'or equal ' : ''}0
-javax.validation.constraints.Size.message        = size must be between {min} and {max}
+jakarta.validation.constraints.AssertFalse.message = must be false
+jakarta.validation.constraints.AssertTrue.message  = must be true
+jakarta.validation.constraints.DecimalMax.message  = must be less than or equal to {value}
+jakarta.validation.constraints.DecimalMin.message  = must be greater than or equal to {value}
+jakarta.validation.constraints.Digits.message      = numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)
+jakarta.validation.constraints.Email.message       = not a valid email address
+jakarta.validation.constraints.Future.message      = must be in the future
+jakarta.validation.constraints.Max.message         = must be less than or equal to {value}
+jakarta.validation.constraints.Min.message         = must be greater than or equal to {value}
+jakarta.validation.constraints.Negative.message    = must be less ${inclusive == true ? 'or equal ' : ''}0
+jakarta.validation.constraints.NotBlank.message    = must not be empty
+jakarta.validation.constraints.NotEmpty.message    = must not be empty
+jakarta.validation.constraints.NotNull.message     = may not be null
+jakarta.validation.constraints.Null.message        = must be null
+jakarta.validation.constraints.Past.message        = must be in the past
+jakarta.validation.constraints.Pattern.message     = must match "{regexp}"
+jakarta.validation.constraints.Positive.message    = must be greater ${strict == false ? 'or equal ' : ''}0
+jakarta.validation.constraints.Size.message        = size must be between {min} and {max}
 
 org.hibernate.validator.constraints.CreditCardNumber.message       = invalid credti card number
 org.hibernate.validator.constraints.Currency.message               = invalid currency (permitted values: {value})
